comecei a escreve conteudo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 <body>
     <main>
         <header>
-            <h1>Titulo do site</h1>
+            <h1>Cursos gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto do Artigo 001</p>
+            <h2>Curso de HTML5 e CSS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus at, illum laudantium voluptatum reiciendis eum vel iure, 
+                laboriosam totam quasi debitis soluta id! Veniam dicta non unde corrupti! Dolore, magnam.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de javasript</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime officia repellendus vero deserunt ipsum vel, 
+                obcaecati odit nihil? At cum sunt pariatur laudantium earum magni ut harum, quas fuga. Placeat?</p>
         </article>
     </main>
 </body>
