Testando commit :wq

--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
         </article>
         <article>
             <h2>Curso de javasript</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime officia repellendus vero deserunt ipsum vel, 
-                obcaecati odit nihil? At cum sunt pariatur laudantium earum magni ut harum, quas fuga. Placeat?</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime officia repellendus o Bahia é o Mundo.</p>
         </article>
     </main>
 </body>
